# rolodex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rolodex.toml  cloudbuild.yaml  docker-compose.yaml  entrypoint.sh
.dependabot/: config.yml
.github/: dependabot.yml
2019-04-16-114055_create_users/: up.sql
lib/: Cargo.toml  build.rs
lib/proto/: health.proto  rolodex.proto
lib/src/: lib.rs
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2019-04-22-143449_create_clients/: up.sql
migrations/2019-04-22-143449_create_users/: up.sql
migrations/2019-04-22-144548_create_unique_email_addresses/: down.sql  up.sql
migrations/2019-05-15-230817_create_client_account_action_types/: down.sql  up.sql
migrations/2019-05-15-230821_create_client_account_actions/: down.sql  up.sql
migrations/2019-08-09-204626_create_phone_verification_codes/: down.sql  up.sql
migrations/2019-08-23-230044_add_ral_field/: down.sql  up.sql
migrations/2019-09-04-181907_add_clients_avatar_version/: down.sql  up.sql
migrations/2019-09-10-001159_create_prefs/: down.sql  up.sql
migrations/2019-09-11-003024_add_client_phone_country_code/: down.sql  up.sql
migrations/2019-09-15-210240_create_phone_numbers/: down.sql  up.sql
migrations/2019-09-27-211419_add_referred_by/: down.sql  up.sql
migrations/2019-10-05-003235_add_prefs_leaderboard/: down.sql  up.sql
migrations/2019-10-06-200233_add_updated_at_trigger/: up.sql
src/: config.rs  db.rs  email.rs  lib.rs  main.rs  messagebird.rs  models.rs  optional.rs  password_hash.rs  sanitizers.rs  schema.rs  service.rs  sql_types.rs
tools/loader/: Cargo.toml  Dockerfile  cloudbuild.yaml
tools/loader/src/: main.rs
