[package]
name = "rolodex"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]

[dependencies]
chrono = { version = "0.4"  }
data-encoding = "2"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
env_logger = { version = "0.6", default-features = false }
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
instrumented = { git = "ssh://git@github.com/umpyre-code/instrumented.git" }
lazy_static = "1.3"
log = "0.4"
mime = "0.3"
phonenumber = "0.2"
r2d2_redis = "0.9.0"
regex = "1"
rolodex-grpc = { path = "lib"}
serde = "1.0"
serde_derive = "1.0"
tokio = "0.1"
toml = "0.5"
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-service = "0.2"
tower-util = { git = "https://github.com/tower-rs/tower" }
trust-dns = { version = "0.16", default-features = false, features = ["dns-over-https-rustls", "dns-over-rustls", "dnssec-ring"] }
url = "1"
uuid = "0.7"
yansi = "0.5"
