[package]
name = "rolodex"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
default-run = "rolodex"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4"  }
data-encoding = "2"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
env_logger = { version = "0.7", default-features = false }
failure = "0.1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
instrumented = "0.1"
lazy_static = "1.3"
log = "0.4"
mime = "0.3"
phonenumber = "0.2"
r2d2_redis_cluster = "0.1"
rand = "0.7"
regex = "1"
reqwest = "0.9"
rolodex-grpc = { path = "lib"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
srp = { git = "https://github.com/brndnmtthws/PAKEs", branch = "alternate-implementation" }
tokio = "1.0"
tokio-udp = "0.1"
toml = "0.5"
tower-hyper = "0.1"
tower-request-modifier = "0.1"
tower-service = "0.2"
tower-util = "0.1"
trust-dns = { version = "0.17", default-features = false, features = ["dns-over-https-rustls", "dns-over-rustls", "dnssec-ring"] }
url = "2"
uuid = "0.7"
yansi = "0.5"

[patch.crates-io]
prometheus = { git = "https://github.com/brndnmtthws/rust-prometheus.git", branch = "superbranch" }

