[package]
name = "rolodex-grpc"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@brndn.io>"]
edition = "2018"

[dependencies]
prost = "0.5"
bytes = "0.4"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc", rev = "46857f0c9f760e5187603decf8d488a3c19eb994" }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc", rev = "46857f0c9f760e5187603decf8d488a3c19eb994" }
